# Sekaiju

./: .gitignore  CMakeLists.txt  README.md
IniData/: CMakeLists.txt  IniData.c  IniData.def  IniData.h  PtrArray.c  PtrArray.h  readme.txt
MIDIClock/: CMakeLists.txt  MIDIClock.c  MIDIClock.h  readme.txt
MIDIData/: CMakeLists.txt  MIDIData.c  MIDIData.h  readme.txt  readme_en.txt
MIDIIO/: CMakeLists.txt  MIDIIO.c  MIDIIO.h  readme.txt
MIDIInstrument/: CMakeLists.txt  MIDIInstrument.c  MIDIInstrument.h  readme.txt
MIDIStatus/: CMakeLists.txt  MIDIStatus.c  MIDIStatus.h  readme.txt
Sekaiju/: CMakeLists.txt  Sekaiju.ini  readme.txt  readme_ch.txt  readme_en.txt
Sekaiju/SekaijuRes/: CMakeLists.txt  SekaijuChs.rc  SekaijuEnu.rc  SekaijuJpn.rc  SekaijuRes.rc
Sekaiju/instrument/: Roland_SC-55.ins
Sekaiju/src/: AboutDlg.cpp  AutoSaveDlg.cpp  AutoSaveDlg.h  ChildFrame.cpp  ChildFrame.h  ColorOptionPage.cpp  ColorOptionPage.h  ColorSelectComboBox.cpp  ColorSelectComboBox.h  ColorfulCheckListBox.cpp  ColorfulCheckListBox.h  ColorfulComboBox.cpp  ControlChangeListBox.cpp  ControlChangeListBox.h  EditBeatScanDlg.cpp  EditBreakupAndTrillDlg.cpp  EditChannelDlg.cpp  EditDurationDlg.cpp  EditInsertMeasureDlg.cpp  EditKeyDlg.cpp  EditQuantizeDlg.cpp  EditRemoveMeasureDlg.cpp  EditStrokeDlg.cpp  EditTempoDlg.cpp  EditTimeDlg.cpp  EditTimeSmpDlg.cpp  EditTrackDlg.cpp  EditValueDlg.cpp  EditVelocityDlg.cpp  EventKindListBox.cpp  EventListFrame.cpp  EventListFrame.h  EventListIndexPropertyView.cpp  EventListIndexPropertyView.h  EventListIndexScaleView.cpp  EventListIndexScaleView.h  EventListOptionPage.cpp  EventListOptionPage.h  EventListPrintView.cpp  EventListPropertyScaleView.cpp  (+113 more)
